# neuralab

./: .env  README.md  pyproject.toml
doc/NeuraLab.vault/: Untitled.canvas  binance-contracts.md  data flow.canvas
doc/NeuraLab.vault/.obsidian/: workspace.json
notebooks/: dataset-analysis.ipynb  hercules-h0.ipynb  train.py
src/: timeutils.py
src/aioexchange/client/: abstract.py  binance_spot.py
src/dataproxy/: README.md  __init__.py  binance.py  client.py  dataframe.py  dataset.py  labelset.py  loader.py
src/docs/: legendre.py
src/model/: hmm.py
src/model/hercules/: h0.py
src/model/valkiria/: v0.py
src/neuralab/: __init__.py  __main__.py  logging.py  resource.py  settings.py  storage.py  track.py  utils.py
src/neuralab/fn/: __init__.py  checks.py  cosine_distance.py  diff_matrix.py  distance.py  emstats.py  fit.py  random_slice.py  sim.py  stats.py  tri_activation.py
src/neuralab/jax/: hippo.py
src/neuralab/model/: hercules.py  magno.py
src/neuralab/nl/: __init__.py  avg_attn.py  common.py  ema.py  feed_forward.py  gausian.py  gauss.py  gaussian_hmm.py  hippo.py  hmm.py  mamba.py  mamba2.py  model.py  norm.py  sim.back.py  ssm.py  tri_activation.py  triact.py  vae.py
src/neuralab/nn/: hippo.py
src/neuralab/torch/: hippo.py  mamba.py
src/neuralab/trading/: __init__.py  dataframe copy.py  dataframe.py  dataset.py  evaluation.py  ground_truth.py  knowledge.py  labels.py  sim.py  trainer.py  trends.py
src/neuralab/utils/: __init__.py  base_dataset.py  nested_types.py  timeutils.py  timeutils2.py
src/snippets/: __init__.py  mamba.py
(+9 files in other folders)
